syntax = "proto3";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "net.atos.daf.ct2.authenticationservice";

package net.atos.daf.ct2.authenticationservice;

service AuthService {
  rpc Auth (IdentityRequest ) returns (AccountIdentityResponse);
  rpc Validate (ValidateRequest) returns (ValidateResponse);
  rpc ChangePassword (IdentityRequest ) returns (CommonResponse);
  //rpc SignOut (AuthRequest) returns (AuthResponse);
}
message IdentityRequest {
    string UserName=1;
    string Password=2;
}
message AccountIdentityResponse {
    Responsecode code=1;
    string Message=2;
    AccountPreference AccountPreference= 3;      
}
message ValidateRequest {
    string Token=1;
}
message ValidateResponse {
    Responsecode Code=1;
    string Message = 2;  
    bool Valid = 3; 
}
message CommonResponse {
    Responsecode Code=1;
    string Message = 2;  
}

message AccountPreference
{
    google.protobuf.Int32Value Id =1;
    int32 RefId =2;
    PreferenceType preferenceType =3;
    int32 LanguageId =4;
    int32 TimezoneId =5;
    CurrencyType currencyType =6;
    UnitType unitType = 7;
    VehicleDisplayType VehicleDisplayType =8;
    DateFormatDisplayType dateFormatType =9;
    string DriverId =10;
    bool IsActive =11;
}
enum AccountType
{
    None = 0;
    SystemAccount = 1;
    PortalAccount = 2;        
}
enum Responsecode{
    Success = 0;
    Failed = 1;
}
enum PreferenceType
{
    //None = 'N',
    Account = 0;
    Organization = 1;
}
enum CurrencyType
{
    //None = 'N',
    Euro = 0;
    Usdollar = 1;
    PondSterling = 2;
}
enum UnitType
{
    // None = 'N',
    Metric= 0;
    Imperial= 1;
    Usimperial = 2;
}
enum VehicleDisplayType    
{
    //None = 'N',
    RegistrationNumber= 0;
    Name= 1;
    Vin = 2;   
}
enum DateFormatDisplayType
{
        //None = 'N',
    DayMonthYear= 0;
    MonthDayYear= 1;
    YearMonthDay= 2;
}  


